css/projectlist.css
/************************************  LEGEND

purple: #32052F;
yellow: #fcd000;
gray: #959595;

*/

h1 {
  font-size:40px;
  color:#fcd000;
  margin-bottom:6.5vh;
}

.projectlist {
  margin-left: 10%;
  width:50%;
  display: inline-block;
}

.projectimage {
  margin-right: 10%;
  margin-left: 5%;
  width:25%;
  height:68vh;
  display: inline-block;
  float: right;
}

.imagelarge {
  width:90%;
  height:40vh;
  margin-top:2.5vh;
  object-fit: cover;
}

.imagesmall {
  width:20%;
  position: fixed;
  margin-top:225px;
  margin-left:30%;
  object-fit: cover;
  height:30vh;
  z-index: 2;
  border-style: solid;
  border-width:10px;
  border-color: #fcd000;
  padding:20px;
  opacity: 0;
}

.projectlist h1 span:hover {
  background-color: rgba(252, 208, 0, 0.9);
  color:white;
  padding: 10px;
}

.listfade {
  width:100%;
  position: fixed;
  margin: 0%;
  object-fit: cover;
  opacity: 0.1;
  z-index: -500;
  height: 100vh;
  top:-0%;
  display: none;
}

#charlieprojectimage, #invitationprojectimage, #exhibitionprojectimage, #agendaprojectimage, #viledaprojectimage   {
  display: none;
}

#beeprojectimage .imagelarge {
  display: none;
}

